--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+/config/database.yml
+/db/schema.rb
+Gemfile.lock
 
 #paperclip
 /public/system/*
