--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,8 @@ development:
   database: list_dev
   host: localhost
   pool: 5
-  username: deploy
-  password: gliA6kkvn
+  username: list
+  password: list
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
